[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/scenes/components/lawrence/growth_highway/growth_highway.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/scenes/components/lawrence/note/note.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/scenes/components/lawrence/decay_highway/decay_highway.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/scenes/main/lawrence/2d/gameplay_orthogonal.gd" type="Script" id=4]

[node name="GameplayOrthogonal" type="Node2D"]
script = ExtResource( 4 )

[node name="GrowthHighway" parent="." instance=ExtResource( 1 )]
position = Vector2( 460, 900 )

[node name="DecayHighway" parent="." instance=ExtResource( 3 )]
position = Vector2( 1460, 900 )

[node name="Note" parent="." instance=ExtResource( 2 )]
position = Vector2( 260, -315 )

[node name="Note2" parent="." instance=ExtResource( 2 )]
position = Vector2( 660, -476 )

[node name="Note3" parent="." instance=ExtResource( 2 )]
position = Vector2( 460, -598 )

[node name="Note4" parent="." instance=ExtResource( 2 )]
position = Vector2( 660, -1920 )

[node name="Note5" parent="." instance=ExtResource( 2 )]
position = Vector2( 1460, -1711 )

[node name="Note6" parent="." instance=ExtResource( 2 )]
position = Vector2( 1660, -1547 )

[node name="Note7" parent="." instance=ExtResource( 2 )]
position = Vector2( 1660, -1345 )

[node name="Note8" parent="." instance=ExtResource( 2 )]
position = Vector2( 1460, -1159 )

[node name="Note9" parent="." instance=ExtResource( 2 )]
position = Vector2( 1260, -934 )
